notizia_gen/tests/compile_fail/invalid_task_syntax.stderr
error: Missing #[task(message = T)] attribute. The Task derive macro requires specifying the message type.
       Example: #[task(message = MyMessage)]
 --> tests/compile_fail/invalid_task_syntax.rs:7:10
  |
7 | #[derive(Task)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Task` (in Nightly builds, run with -Z macro-backtrace for more info)
